# fpga-sleep-tracker

./: LICENSE  README.md  requirements.txt
data/sleep_wake_classifier/: 46343_acceleration.txt
data/three_feature_classifier/: test_features.csv  test_labels.csv
fpga/: README.md
fpga/source/: sleep_tracker_cu.sv  top.sv
fpga/source/comm/: accel_pkg.sv  accel_sampler.sv  i2c.v
fpga/source/comm/uart/: uart.sv
fpga/source/dsp/: filt_gen.ipynb
fpga/source/dsp/biquad/: biquad.sv  filt_gen.ipynb
fpga/source/featurize/: actigraphy_counts.sv  peak_detect.sv  sum_samples.sv
fpga/source/fifo/: fifo_256k.sv  fifo_ebr.sv
fpga/source/math/: math_pkg.sv
fpga/source/mem/: rom.sv  sp_ram.sv
fpga/source/nn/: keras_to_sv.py  nn.sv  nn_biases.sv  nn_pkg.sv  nn_weights.sv
fpga/source/util/handshake/: handshake.sv
fpga/source/util/stateful/: rising_edge.sv
fpga/test/: Makefile  top_tb.py
fpga/test/dsp/biquad/: Makefile  biquad_tb.py
fpga/test/featurize/actigraphy_counts/: Makefile  actigraphy_counts_tb.py
fpga/test/featurize/peak_detect/: Makefile  peak_detect_tb.py
fpga/test/featurize/sum_seconds/: Makefile  fixedpoint.py  sum_secs_tb.py
fpga/test/fifo/: Makefile  fifo_tb.py
fpga/test/nn/: Makefile  biases.mif  binutils.py  fixedpoint.py  host_nn_test.py  nn_tb.py  weights.mif
host/: Cargo.toml  README.md
host/examples/: one_shot.rs  sleep_tracker.rs
host/src/: bin.rs  data.rs  error.rs  lib.rs  protocol.rs  session.rs  traits.rs
models/: demo_mnist.ipynb  mnist_40_model.h5  mnist_model.h5  sleep_model.h5  sleep_wake.h5
