[package]
name = "host_comm"
version = "0.1.0"
authors = ["Daniel Hensley <hensley.daniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serialport = "4.0.0"
fixed = "1.7.0"
serde = { version = "1.0.125", features = ["derive"] }
thiserror = "1.0.24"
structopt = "0.3.21"
anyhow = "1.0.40"

[dev-dependencies]
csv = "1.1.6"

[lib]
name = "host_comm"
path = "src/lib.rs"

[[bin]]
name = "nnfpga"
path = "src/bin.rs"

[[example]]
name = "one_shot"
path = "examples/one_shot.rs"

[[example]]
name = "sleep_tracker"
path = "examples/sleep_tracker.rs"
